Update to VS v1.6.7

--- a/VintagestoryAPI.csproj
+++ b/VintagestoryAPI.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Common\Collectible\CreativeTabAndStackList.cs" />
     <Compile Include="Common\Collectible\GrindingProperties.cs" />
     <Compile Include="Common\EntityBehavior\BehaviorNameTag.cs" />
+    <Compile Include="Common\FrameProfilerUtil.cs" />
     <Compile Include="Common\Model\Animation\AnimationMetaData.cs" />
     <Compile Include="Common\Model\Animation\BlendEntityAnimator.cs" />
     <Compile Include="Common\Model\Animation\ElementPose.cs" />
