--- a/VintagestoryAPI.csproj
+++ b/VintagestoryAPI.csproj
@@ -130,7 +130,6 @@
     <Compile Include="Client\UI\Elements\Impl\Interactive\Inventory\GuiElementItemSlotGrid.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\Inventory\GuiElementItemSlotGridBase.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\Inventory\GuiElementItemSlotGridExcl.cs" />
-    <Compile Include="Client\UI\Elements\Impl\Interactive\Inventory\GuiElementItemSlotGridJounral.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\Inventory\GuiElementPassiveItemSlot.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\Inventory\GuiElementSkillItemGrid.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\Text\Components\TextComponent.cs" />
@@ -252,6 +251,7 @@
     <Compile Include="Server\LandClaim.cs" />
     <Compile Include="Util\EqualityUtil.cs" />
     <Compile Include="Util\SerializerUtil.cs" />
+    <Compile Include="Util\StringExtensions.cs" />
     <Compile Include="Util\StringUtil.cs" />
     <None Include="api\index.md" />
     <None Include="articles\intro.md" />
@@ -367,7 +367,7 @@
     <Compile Include="Client\EnumCameraType.cs" />
     <Compile Include="Client\Render\EnumFaceCullMode.cs" />
     <Compile Include="Common\EnumHandled.cs" />
-    <Compile Include="Common\Collectible\Item\EnumItemCategory.cs" />
+    <Compile Include="Common\Collectible\Item\EnumItemStorageFlags.cs" />
     <Compile Include="Common\Controls\EnumLockFlyPlaneMode.cs" />
     <Compile Include="Common\EnumHighlightShape.cs" />
     <Compile Include="Common\Controls\EnumModifierKey.cs" />
