--- a/VintagestoryAPI.csproj
+++ b/VintagestoryAPI.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Client\Input\KeyEvent.cs" />
     <Compile Include="Client\Input\MouseEvent.cs" />
     <Compile Include="Common\API\EnumBlockAccessResponse.cs" />
+    <Compile Include="Common\Entity\EnumInteractMode.cs" />
     <Compile Include="Common\Entity\Player\ActiveHotbarSlotChangedEvent.cs" />
     <Compile Include="Client\MeshPool\MeshDataPool.cs" />
     <Compile Include="Client\MeshPool\MeshDataPoolManager.cs" />
