--- a/VintagestoryAPI.csproj
+++ b/VintagestoryAPI.csproj
@@ -93,7 +93,9 @@
     <Compile Include="Client\Input\KeyCombination.cs" />
     <Compile Include="Client\Input\KeyEvent.cs" />
     <Compile Include="Client\Input\MouseEvent.cs" />
+    <Compile Include="Client\Render\EnumFrameBuffer.cs" />
     <Compile Include="Client\Render\IAviWriter.cs" />
+    <Compile Include="Client\UI\Elements\Impl\Misc\GuiElementCustomRender.cs" />
     <Compile Include="Common\API\EnumBlockAccessResponse.cs" />
     <Compile Include="Common\API\IBlockAccessorPrefetch.cs" />
     <Compile Include="Common\API\ILandClaimAPI.cs" />
@@ -277,6 +279,7 @@
     <Compile Include="Server\LandClaim.cs" />
     <Compile Include="Util\EqualityUtil.cs" />
     <Compile Include="Util\NetUtil.cs" />
+    <Compile Include="Util\ObjectCacheUtil.cs" />
     <Compile Include="Util\SerializerUtil.cs" />
     <Compile Include="Util\StringExtensions.cs" />
     <Compile Include="Util\StringUtil.cs" />
