--- a/VintagestoryAPI.csproj
+++ b/VintagestoryAPI.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Common\Collectible\TransitionableProperties.cs" />
     <Compile Include="Common\Crafting\BarrelRecipe.cs" />
     <Compile Include="Common\Crafting\RecipeRegistry.cs" />
+    <Compile Include="Common\Entity\EntityStats.cs" />
     <Compile Include="Common\Entity\EnumInteractMode.cs" />
     <Compile Include="Common\Entity\Player\ActiveSlotChangeEventArgs.cs" />
     <Compile Include="Client\MeshPool\MeshDataPool.cs" />
