--- a/VintagestoryAPI.csproj
+++ b/VintagestoryAPI.csproj
@@ -109,7 +109,9 @@
     <Compile Include="Client\ParticlePhysics.cs" />
     <Compile Include="Client\Render\EnumFrameBuffer.cs" />
     <Compile Include="Client\Render\IAviWriter.cs" />
+    <Compile Include="Client\Texture\FastBitmap.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\GuiElementContainer.cs" />
+    <Compile Include="Client\UI\Elements\Impl\Interactive\Text\Richtext\IconComponent.cs" />
     <Compile Include="Client\UI\Elements\Impl\Misc\GuiElementCustomRender.cs" />
     <Compile Include="Common\API\EnumBlockAccessResponse.cs" />
     <Compile Include="Common\API\IBlockAccessorPrefetch.cs" />
@@ -119,6 +121,7 @@
     <Compile Include="Common\Collectible\HeldSounds.cs" />
     <Compile Include="Common\Collectible\TransitionableProperties.cs" />
     <Compile Include="Common\Crafting\BarrelRecipe.cs" />
+    <Compile Include="Common\Crafting\LayeredVoxelRecipe.cs" />
     <Compile Include="Common\Crafting\RecipeRegistry.cs" />
     <Compile Include="Common\Entity\EntityStats.cs" />
     <Compile Include="Common\Entity\EnumInteractMode.cs" />
