Update files to v1.13.1

--- a/VintagestoryAPI.csproj
+++ b/VintagestoryAPI.csproj
@@ -44,7 +44,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
-    <DocumentationFile>..\bin\Release\VintagestoryAPI.XML</DocumentationFile>
+    <DocumentationFile>..\bin\Release\VintagestoryAPI.xml</DocumentationFile>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
@@ -260,6 +260,7 @@
     <Compile Include="Common\TyronThreadPool.cs" />
     <Compile Include="Datastructures\FloatDataMap3D.cs" />
     <Compile Include="Datastructures\FastList.cs" />
+    <Compile Include="Datastructures\RingArray.cs" />
     <Compile Include="Math\Matrix\Quaternionf.cs" />
     <Compile Include="Server\API\IPlayerDataManager.cs" />
     <Compile Include="Util\BitmapExtensions.cs" />
