Update files to v1.14

--- a/VintagestoryAPI.csproj
+++ b/VintagestoryAPI.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Common\API\ILandClaimAPI.cs" />
     <Compile Include="Client\API\IMacroManager.cs" />
     <Compile Include="Common\Collectible\Block\BlockEntityBehavior.cs" />
+    <Compile Include="Common\Collectible\Block\IBlockFlowing.cs" />
     <Compile Include="Common\Collectible\FertilizerProps.cs" />
     <Compile Include="Common\Collectible\CrushingProperties.cs" />
     <Compile Include="Common\Collectible\HeldSounds.cs" />
@@ -268,9 +269,11 @@
     <Compile Include="Datastructures\FastList.cs" />
     <Compile Include="Datastructures\RingArray.cs" />
     <Compile Include="Math\Matrix\Quaternionf.cs" />
+    <Compile Include="Math\Vector\FastVec3f.cs" />
     <Compile Include="Server\API\IPlayerDataManager.cs" />
     <Compile Include="Server\EnumPlayerJoinBehavior.cs" />
     <Compile Include="Util\BitmapExtensions.cs" />
+    <Compile Include="Util\FastSetOfLongs.cs" />
     <Compile Include="Util\IgnoreUtil.cs" />
     <Compile Include="Util\JsonUtil.cs" />
     <Compile Include="Common\Assets\Mod.cs" />
