--- a/VintagestoryAPI.csproj
+++ b/VintagestoryAPI.csproj
@@ -359,6 +359,7 @@
     <Compile Include="Util\NetUtil.cs" />
     <Compile Include="Util\ObjectCacheUtil.cs" />
     <Compile Include="Util\PosUtil.cs" />
+    <Compile Include="Util\QueueOfInt.cs" />
     <Compile Include="Util\SerializerUtil.cs" />
     <Compile Include="Util\StringExtensions.cs" />
     <Compile Include="Util\StringUtil.cs" />
