--- a/VintagestoryAPI.csproj
+++ b/VintagestoryAPI.csproj
@@ -134,11 +134,17 @@
     <Compile Include="Client\Render\ColorMapData.cs" />
     <Compile Include="Client\Render\EnumFrameBuffer.cs" />
     <Compile Include="Client\Render\IAviWriter.cs" />
+    <Compile Include="Client\Render\PerceptionEffects.cs" />
     <Compile Include="Client\Texture\TextureDictionary.cs" />
     <Compile Include="Client\Texture\FastBitmap.cs" />
     <Compile Include="Client\UI\Dialog\GuiDialogCharacterBase.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\Controls\GuiElementColorListPicker.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\GuiElementContainer.cs" />
+    <Compile Include="Client\UI\Elements\Impl\Interactive\Handbook\GuiElementFlatList.cs" />
+    <Compile Include="Client\UI\Elements\Impl\Interactive\Handbook\GuiHandbookGroupedItemstackPage.cs" />
+    <Compile Include="Client\UI\Elements\Impl\Interactive\Handbook\GuiHandbookItemStackPage.cs" />
+    <Compile Include="Client\UI\Elements\Impl\Interactive\Handbook\GuiHandbookPage.cs" />
+    <Compile Include="Client\UI\Elements\Impl\Interactive\Handbook\GuiHandbookTextPage.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\Text\Richtext\IconComponent.cs" />
     <Compile Include="Client\UI\Elements\Impl\Misc\GuiElementCustomRender.cs" />
     <Compile Include="Common\API\EnumBlockAccessResponse.cs" />
@@ -155,6 +161,7 @@
     <Compile Include="Common\Collectible\FertilizerProps.cs" />
     <Compile Include="Common\Collectible\CrushingProperties.cs" />
     <Compile Include="Common\Collectible\HeldSounds.cs" />
+    <Compile Include="Common\Collectible\ICollectibleDisplayable.cs" />
     <Compile Include="Common\Collectible\TransitionableProperties.cs" />
     <Compile Include="Common\Combat\EnumMemberAttribute.cs" />
     <Compile Include="Common\Crafting\BarrelRecipe.cs" />
@@ -194,7 +201,6 @@
     <Compile Include="Client\UI\Elements\Impl\Interactive\GuiElementConfigList.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\GuiElementDialogTitleBar.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\GuiElementNumberInput.cs" />
-    <Compile Include="Client\UI\Elements\Impl\Interactive\GuiElementStacklist.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\GuiElementStatbar.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\GuiElementCellList.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\GuiElementTextArea.cs" />
@@ -220,10 +226,9 @@
     <Compile Include="Client\UI\Elements\Impl\Interactive\Text\GuiElementNewVersionText.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\Text\GuiElementRichtext.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\Text\MultilineTextUtil.cs" />
-    <Compile Include="Client\UI\Elements\Impl\Misc\GuiElementCell.cs" />
+    <Compile Include="Client\UI\Elements\Impl\Misc\GuiElementMainMenuCell.cs" />
     <Compile Include="Client\UI\Elements\Impl\Misc\GuiElementClip.cs" />
-    <Compile Include="Client\UI\Elements\Impl\Misc\GuiElementModCell.cs" />
-    <Compile Include="Client\UI\Elements\Impl\Misc\ListCellEntry.cs" />
+    <Compile Include="Client\UI\Elements\Impl\Misc\SavegameCellEntry.cs" />
     <Compile Include="Client\UI\Elements\Impl\Static\GuiElementCustomDraw.cs" />
     <Compile Include="Client\UI\Elements\Impl\Static\GuiElementDialogBackground.cs" />
     <Compile Include="Client\UI\Elements\Impl\Static\GuiElementEngravedText.cs" />
@@ -291,13 +296,18 @@
     <Compile Include="Datastructures\FloatDataMap3D.cs" />
     <Compile Include="Datastructures\FastList.cs" />
     <Compile Include="Datastructures\RingArray.cs" />
+    <Compile Include="Localization\ITranslationService.cs" />
+    <Compile Include="Localization\TranslationService.cs" />
     <Compile Include="Math\Matrix\Quaternionf.cs" />
     <Compile Include="Math\Size\Size3.cs" />
     <Compile Include="Math\Vector\Vec3iAndFacingFlags.cs" />
     <Compile Include="Math\Vector\FastVec3f.cs" />
+    <Compile Include="Math\Vector\Vec4Us.cs" />
+    <Compile Include="Math\Vector\Vec4s.cs" />
     <Compile Include="Server\API\IPlayerDataManager.cs" />
     <Compile Include="Server\EnumPlayerJoinBehavior.cs" />
     <Compile Include="Util\BitmapExtensions.cs" />
+    <Compile Include="Util\ExifData.cs" />
     <Compile Include="Util\FastSetOfLongs.cs" />
     <Compile Include="Util\IgnoreUtil.cs" />
     <Compile Include="Util\JsonUtil.cs" />
@@ -429,7 +439,7 @@
     <Compile Include="Server\API\IServerNetworkAPI.cs" />
     <Compile Include="Server\API\IServerPlayer.cs" />
     <Compile Include="Server\API\IWorldManagerAPI.cs" />
-    <Compile Include="Config\Lang.cs" />
+    <Compile Include="Localization\Lang.cs" />
     <Compile Include="Datastructures\AttributeTree\DoubleAttribute.cs" />
     <Compile Include="Datastructures\AttributeTree\FloatAttribute.cs" />
     <Compile Include="Datastructures\AttributeTree\IntAttribute.cs" />
