--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,7 +24,7 @@ jobs:
         args: docfx.json
 
     - name: Deploy Docs
-      uses: JamesIves/github-pages-deploy-action@releases/v4.2.5
+      uses: JamesIves/github-pages-deploy-action@v4.2.5
       with:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         BRANCH: master
