--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,12 +11,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - shell: bash
-      run: |
-        git config user.name "name"
-        git config user.email "<>"
-        git config push.default "current"
-        ./run
+      with:
+        token: ${{ secrets.GH_TOKEN }}
 
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
