--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - master
 
+env:
+  DOCFX_SOURCE_BRANCH_NAME: master
+
 jobs:
   docs:
     runs-on: ubuntu-latest
@@ -21,7 +24,6 @@ jobs:
       name: Build Documentation
       with:
         args: docfx.json
-        DOCFX_SOURCE_BRANCH_NAME: master
 
     - name: Deploy Docs
       uses: JamesIves/github-pages-deploy-action@v4.2.5
