--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,6 +28,6 @@ jobs:
     - name: Deploy Docs
       uses: JamesIves/github-pages-deploy-action@v4.2.5
       with:
-        TOKEN: ${{ secrets.GH_TOKEN }}
-        BRANCH: master
-        FOLDER: ./docs/_site
+        token: ${{ secrets.GH_TOKEN }}
+        branch: master
+        folder: ./docs/_site
