--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,9 +1,11 @@
-name: Build Docs
+name: build-docs
 
 on:
   push:
     branches:
       - master
+    paths-ignore:
+      - 'docs/**'
 
 env:
   DOCFX_SOURCE_BRANCH_NAME: master
@@ -13,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
@@ -25,9 +27,10 @@ jobs:
       with:
         args: docfx.json
 
-    - name: Deploy Docs
-      uses: JamesIves/github-pages-deploy-action@v4.2.5
-      with:
-        token: ${{ secrets.GH_TOKEN }}
-        branch: master
-        folder: ./docs/_site
+    - uses: actions/checkout@v3
+    - run: |
+        git config user.name github-actions
+        git config user.email github-actions@github.com
+        git add docs
+        git commit -m "docs: Build for \`${GITHUB_SHA}\`"
+        git push
