fix: `clean: false`

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,7 +28,9 @@ jobs:
         args: docfx.json
 
     - uses: actions/checkout@v3
-    - run: |
+      with:
+        clean: false
+      run: |
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add docs
