--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -30,7 +30,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         clean: false
-      run: |
+    - run: |
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add docs
