--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,6 +31,7 @@ jobs:
       with:
         clean: false
     - run: |
+        git status
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add docs
