--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,5 +35,5 @@ jobs:
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add docs
-        git commit -m "docs: Build for \`${GITHUB_SHA}\`"
+        git commit -m "docs: Build for ${GITHUB_SHA}"
         git push
