--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,17 +31,9 @@ jobs:
         args: docfx.json
 
     - name: Commit changes
-      uses: actions/checkout@v2
-      with:
-        clean: false
-    - run: |
+      run: |
         git config user.name "github-actions[bot]"
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git add docs
         git commit -m "docs: Build for ${GITHUB_SHA}"
-
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GH_TOKEN }}
-        branch: ${{ github.ref }}
+        git push
