--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,14 +25,14 @@ jobs:
       with:
         dotnet-version: ${{ env.DotNetVersion }}
 
-    - name: Build Documentation
-      uses: nikeee/docfx-action@v1.0.0
-      with:
-        args: docfx.json
+          #    - name: Build Documentation
+          #      uses: nikeee/docfx-action@v1.0.0
+          #      with:
+          #        args: docfx.json
 
     - name: Commit changes
       run: |
-        get remote get-url origin
+        git remote get-url origin
         git config user.name "github-actions[bot]"
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git add docs
