--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Commit changes
       run: |
-        git remote get-url origin | sed -i "s/github/test/g"
+        git remote get-url origin | sed "s/github/test/g"
         git config user.name "github-actions[bot]"
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git add docs
