--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,7 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-      with: 
+      with:
+        persist-credentials: true # otherwise, the token used is the GH_TOKEN, instead of your personal access token.
         fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
 
     - name: Setup .NET Core
@@ -31,7 +32,7 @@ jobs:
 
     - name: Commit changes
       run: |
-        git remote get-url origin | sed "s/github/test/g"
+        git remote set-url origin "git@github.com:l1ving/vsapi.git"
         git config user.name "github-actions[bot]"
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git add docs
