--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,7 +17,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        persist-credentials: true # otherwise, the token used is the GH_TOKEN, instead of your personal access token.
         fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
 
     - name: Setup .NET Core
@@ -25,14 +24,13 @@ jobs:
       with:
         dotnet-version: ${{ env.DotNetVersion }}
 
-          #    - name: Build Documentation
-          #      uses: nikeee/docfx-action@v1.0.0
-          #      with:
-          #        args: docfx.json
+    - name: Build Documentation
+      uses: nikeee/docfx-action@v1.0.0
+      with:
+        args: docfx.json
 
     - name: Commit changes
-      run: |
-        git remote set-url origin "git@github.com:l1ving/vsapi.git"
+      run: | 
         git config user.name "github-actions[bot]"
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git add docs
