update to 1.17.3-dev

--- a/VintagestoryAPI.csproj
+++ b/VintagestoryAPI.csproj
@@ -135,15 +135,22 @@
     <Compile Include="Client\Render\ColorMapData.cs" />
     <Compile Include="Client\Render\EnumFrameBuffer.cs" />
     <Compile Include="Client\Render\IAviWriter.cs" />
-    <Compile Include="Client\Render\PerceptionEffects.cs" />
+    <Compile Include="Client\Render\PerceptionEffects\DamagedPerceptionEffect.cs" />
+    <Compile Include="Client\Render\PerceptionEffects\FreezingPerceptionEffect.cs" />
+    <Compile Include="Client\Render\PerceptionEffects\DrunkPerceptionEffect.cs" />
+    <Compile Include="Client\Render\PerceptionEffects\PerceptionEffect.cs" />
+    <Compile Include="Client\Render\PerceptionEffects\PerceptionEffects.cs" />
     <Compile Include="Client\Texture\TextureDictionary.cs" />
     <Compile Include="Client\Texture\FastBitmap.cs" />
     <Compile Include="Client\UI\Dialog\GuiDialogCharacterBase.cs" />
+    <Compile Include="Client\UI\Elements\Impl\Interactive\Controls\GuiElementIconListPicker.cs" />
+    <Compile Include="Client\UI\Elements\Impl\Interactive\Controls\GuiElementElementListPickerBase.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\Controls\GuiElementColorListPicker.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\GuiElementContainer.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\Text\Richtext\HotkeyComponent.cs" />
     <Compile Include="Client\UI\Elements\Impl\Interactive\Text\Richtext\IconComponent.cs" />
     <Compile Include="Client\UI\Elements\Impl\Misc\GuiElementCustomRender.cs" />
+    <Compile Include="Common\API\BlockLayersAccess.cs" />
     <Compile Include="Common\API\EnumBlockAccessResponse.cs" />
     <Compile Include="Common\API\IBlockAccessorPrefetch.cs" />
     <Compile Include="Common\API\ILandClaimAPI.cs" />
