--- a/VintagestoryAPI.csproj
+++ b/VintagestoryAPI.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Common\Collectible\Block\IWithDrawnHeight.cs" />
     <Compile Include="Common\Collectible\Block\IDrawYAdjustable.cs" />
     <Compile Include="Common\Collectible\Block\IWrenchOrientable.cs" />
+    <Compile Include="Common\Collectible\Block\StrongBlockBehavior.cs" />
     <Compile Include="Common\Collectible\DecorSelectionBox.cs" />
     <Compile Include="Common\Collectible\CollectibleBehavior.cs" />
     <Compile Include="Common\Collectible\Block\BlockEntityBehavior.cs" />
@@ -305,7 +306,9 @@
     <Compile Include="Common\MultiblockStructure.cs" />
     <Compile Include="Common\Texture\ColorMap.cs" />
     <Compile Include="Common\TyronThreadPool.cs" />
+    <Compile Include="Datastructures\IMergeable.cs" />
     <Compile Include="Datastructures\Net\GameReleaseVersion.cs" />
+    <Compile Include="Datastructures\SortableQueue.cs" />
     <Compile Include="Datastructures\SmallBoolArray.cs" />
     <Compile Include="Datastructures\FloatDataMap3D.cs" />
     <Compile Include="Datastructures\FastList.cs" />
@@ -315,6 +318,7 @@
     <Compile Include="Math\ColorBlend.cs" />
     <Compile Include="Math\Matrix\Quaternionf.cs" />
     <Compile Include="Math\Size\Size3.cs" />
+    <Compile Include="Math\Vector\Vec2iImmutable.cs" />
     <Compile Include="Math\Vector\Vec3iAndFacingFlags.cs" />
     <Compile Include="Math\Vector\FastVec3f.cs" />
     <Compile Include="Math\Vector\Vec4Us.cs" />
