--- a/VintagestoryAPI.csproj
+++ b/VintagestoryAPI.csproj
@@ -315,8 +315,11 @@
     <Compile Include="Datastructures\RingArray.cs" />
     <Compile Include="Localization\ITranslationService.cs" />
     <Compile Include="Localization\TranslationService.cs" />
+    <Compile Include="Math\Cardinal.cs" />
     <Compile Include="Math\ColorBlend.cs" />
     <Compile Include="Math\Matrix\Quaternionf.cs" />
+    <Compile Include="Math\Noise\NewNormalizedSimplexFractalNoise.cs" />
+    <Compile Include="Math\Noise\NewSimplexNoiseLayer.cs" />
     <Compile Include="Math\Size\Size3.cs" />
     <Compile Include="Math\Vector\Vec3iAndFacingFlags.cs" />
     <Compile Include="Math\Vector\FastVec3f.cs" />
@@ -325,6 +328,7 @@
     <Compile Include="Server\API\IPlayerDataManager.cs" />
     <Compile Include="Server\EnumPlayerJoinBehavior.cs" />
     <Compile Include="Server\PathfinderTask.cs" />
+    <Compile Include="Server\Worldgen\IChunkColumnGenerateRequest.cs" />
     <Compile Include="Util\BitmapExtensions.cs" />
     <Compile Include="Util\ExifData.cs" />
     <Compile Include="Datastructures\Dictionary\FastSmallDictionary.cs" />
