--- a/VintagestoryAPI.csproj
+++ b/VintagestoryAPI.csproj
@@ -386,7 +386,7 @@
     <Compile Include="Math\Size\Size2.cs" />
     <Compile Include="Server\ISaveGame.cs" />
     <Compile Include="Server\IServerConfig.cs" />
-    <Compile Include="Server\LandClaim.cs" />
+    <Compile Include="Common\LandClaim.cs" />
     <Compile Include="Util\EqualityUtil.cs" />
     <Compile Include="Util\NetUtil.cs" />
     <Compile Include="Util\ObjectCacheUtil.cs" />
@@ -560,7 +560,7 @@
     <Compile Include="Datastructures\Dictionary\LimitedDictionary.cs" />
     <Compile Include="Common\Entity\Player\IWorldPlayerData.cs" />
     <Compile Include="Common\Entity\Player\IPlayerInventoryManager.cs" />
-    <Compile Include="Server\IPlayerPrivilegeGroup.cs" />
+    <Compile Include="Common\IPlayerPrivilegeGroup.cs" />
     <Compile Include="Common\API\IWorldChunk.cs" />
     <Compile Include="Common\API\IWorldAccessor.cs" />
     <Compile Include="Math\Matrix\Mat22.cs" />
@@ -635,7 +635,7 @@
     <Compile Include="Server\MultiplayerServerEntry.cs" />
     <Compile Include="Server\PlayerGroup.cs" />
     <Compile Include="Common\PlayerGroupMembership.cs" />
-    <Compile Include="Server\PlayerSpawn.cs" />
+    <Compile Include="Common\PlayerSpawn.cs" />
     <Compile Include="Server\Privilege.cs" />
     <Compile Include="Client\Model\Mesh\CustomMeshDataPartByte.cs" />
     <Compile Include="Client\Model\Mesh\CustomMeshDataPartFloat.cs" />
