--- a/VintagestoryAPI.csproj
+++ b/VintagestoryAPI.csproj
@@ -306,6 +306,7 @@
     <Compile Include="Common\MultiblockStructure.cs" />
     <Compile Include="Common\Texture\ColorMap.cs" />
     <Compile Include="Common\TyronThreadPool.cs" />
+    <Compile Include="Datastructures\FastLargeSetOfLongs.cs" />
     <Compile Include="Datastructures\IMergeable.cs" />
     <Compile Include="Datastructures\Net\GameReleaseVersion.cs" />
     <Compile Include="Datastructures\SortableQueue.cs" />
@@ -326,10 +327,12 @@
     <Compile Include="Math\Vector\Vec4Us.cs" />
     <Compile Include="Math\Vector\Vec4s.cs" />
     <Compile Include="Server\API\IPlayerDataManager.cs" />
+    <Compile Include="Server\API\IServerPhysicsTicker.cs" />
     <Compile Include="Server\EnumPlayerJoinBehavior.cs" />
     <Compile Include="Server\PathfinderTask.cs" />
     <Compile Include="Server\Worldgen\IChunkColumnGenerateRequest.cs" />
     <Compile Include="Util\BitmapExtensions.cs" />
+    <Compile Include="Util\AsyncHelper.cs" />
     <Compile Include="Util\ExifData.cs" />
     <Compile Include="Datastructures\Dictionary\FastSmallDictionary.cs" />
     <Compile Include="Datastructures\FastSetOfInts.cs" />
