--- a/VintagestoryAPI.csproj
+++ b/VintagestoryAPI.csproj
@@ -180,8 +180,10 @@
     <Compile Include="Common\Combat\EnumMemberAttribute.cs" />
     <Compile Include="Common\Crafting\LayeredVoxelRecipe.cs" />
     <Compile Include="Common\Crafting\RecipeRegistry.cs" />
+    <Compile Include="Common\EntityBehavior\ITimedDespawn.cs" />
     <Compile Include="Common\Entity\EntityStats.cs" />
     <Compile Include="Common\Entity\EnumInteractMode.cs" />
+    <Compile Include="Common\Entity\IEntityPartitioning.cs" />
     <Compile Include="Common\Entity\Player\ActiveSlotChangeEventArgs.cs" />
     <Compile Include="Client\MeshPool\MeshDataPool.cs" />
     <Compile Include="Client\MeshPool\MeshDataPoolManager.cs" />
@@ -306,6 +308,7 @@
     <Compile Include="Common\MultiblockStructure.cs" />
     <Compile Include="Common\Texture\ColorMap.cs" />
     <Compile Include="Common\TyronThreadPool.cs" />
+    <Compile Include="Datastructures\CachedConcurrentDictionary.cs" />
     <Compile Include="Datastructures\FastLargeSetOfLongs.cs" />
     <Compile Include="Datastructures\IMergeable.cs" />
     <Compile Include="Datastructures\Net\GameReleaseVersion.cs" />
