--- a/VintagestoryAPI.csproj
+++ b/VintagestoryAPI.csproj
@@ -325,6 +325,7 @@
     <Compile Include="Math\Noise\NewNormalizedSimplexFractalNoise.cs" />
     <Compile Include="Math\Noise\NewSimplexNoiseLayer.cs" />
     <Compile Include="Math\Size\Size3.cs" />
+    <Compile Include="Math\Vector\FastVec3i.cs" />
     <Compile Include="Math\Vector\Vec3iAndFacingFlags.cs" />
     <Compile Include="Math\Vector\FastVec3f.cs" />
     <Compile Include="Math\Vector\Vec4Us.cs" />
