--- a/VintagestoryAPI.csproj
+++ b/VintagestoryAPI.csproj
@@ -330,6 +330,7 @@
     <Compile Include="Math\Vector\FastVec3f.cs" />
     <Compile Include="Math\Vector\Vec4Us.cs" />
     <Compile Include="Math\Vector\Vec4s.cs" />
+    <Compile Include="Server\API\IAsyncServerSystem.cs" />
     <Compile Include="Server\API\IPlayerDataManager.cs" />
     <Compile Include="Server\API\IServerPhysicsTicker.cs" />
     <Compile Include="Server\EnumPlayerJoinBehavior.cs" />
