--- a/VintagestoryAPI.csproj
+++ b/VintagestoryAPI.csproj
@@ -32,6 +32,7 @@
     <ItemGroup>
         <Reference Include="CairoSharp">
             <HintPath>..\Lib\cairo-sharp.dll</HintPath>
+            <Private>True</Private>
         </Reference>
     </ItemGroup>
 </Project>
